fix #44597: Date not showing completely in Preference view on iPhone app

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
@@ -167,6 +167,7 @@
 		width: inherit;
 	}
 	.phone-navbar .phone-navbar-top .form-control {
+		font-size: 13px;
 		float: inherit;
 	}
 	.phone-navbar .phone-navbar-bottom .navbar-nav{
